# debugging_workshop

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/ml_debugging_workshop/hard_failure/: dataset.csv  preprocess.py
src/ml_debugging_workshop/soft_failure/: .gitignore  dvc.yaml  eval.py  preprocessing.py  train.py  train_config.yaml
