[tool.poetry]
name = "ml_debugging_workshop"
version = "0.1.0"
description = ""
authors = ["Juliano Laganá <julianotusi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.1"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
seaborn = "0.13.0"
scikit-learn = "1.2.2"
matplotlib = "^3.7.1"
numpy = "1.23"
hydra-core = "^1"
hydra-optuna-sweeper = "^1.2.0"
mypy = "^1.3.0"
black = "^23.1.0"
pre-commit = "^3.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
dvc = { extras = ["s3"], version = "^3.0.0" }
plotly = "^6.0.0"
pytest = "^8.3.4"
torch = "^2.6.0"
pytorch-lightning = "^2.5.1"
lightning = "^2.5.1"
jsonargparse = { version = ">=4.27.7", extras = ["signatures"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
